Fix initial buffer sizes and improve partial underflow support.

On devices with massive buffer sizes, src= playback will often
use a size too small to satisfy the OS request. So we end up
only filling most of it, but end up with enough data such that
the next call does not cause an underflow.

The fixes are two fold:
1. Use a better initial size when possible.
2. Increase queue capacity anytime we have a partial fill.

BUG=650601
TEST=new unittests. --audio-buffer-size=11160 doesn't glitch.

Review-Url: https://codereview.chromium.org/2375713003
Cr-Commit-Position: refs/heads/master@{#421691}

Former-commit-id: 95d0b149bbb2ec028a24d833ddb5351912f40a93